--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       rel="stylesheet"
     />
   </head>
-
+<!-- end of head -->
   <body>
     <header>
       <img src="./images/PashaBank.png" alt="Pasha Bank" />
