--- a/index.html
+++ b/index.html
@@ -48,7 +48,6 @@
       </div>
       <div id='tableFrame'></div>
     </main>
-    <script src="./JS/sample.js"></script>
-    <script src="./JS/data.js"></script>
+    <script src="./JS/script.js"></script>
   </body>
 </html> 
